Update 'wvdvjd9mu-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.xjiang0909b.jgt9.p3.openshiftapps.com/rhtap/rhtap-qe:60f3d558c3c19adfb9d198f69ade1b770e6d1b16@sha256:a1bb5664be1a006132d27733082dc791e60ac59e2aacaed9c3946a27c90b400e

--- a/components/wvdvjd9mu-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/wvdvjd9mu-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: wvdvjd9mu-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.xjiang0909b.jgt9.p3.openshiftapps.com/rhtap/rhtap-qe:60f3d558c3c19adfb9d198f69ade1b770e6d1b16@sha256:a1bb5664be1a006132d27733082dc791e60ac59e2aacaed9c3946a27c90b400e
+          name: container-image
